Adicionando novos métodos no banco de dados do Mongo

--- a/teste2/appsettings.Development.json
+++ b/teste2/appsettings.Development.json
@@ -1,3 +1,17 @@
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "MongoDbSettings": {
+//    "ConnectionString": "mongodb+srv://isabellerc:conhecimento123@cluster0.9wf04d.mongodb.net/test?retryWrites=true&w=majority"
+//  },
+//  "AllowedHosts": "*"
+//}
+
+
 {
   "Logging": {
     "LogLevel": {
