--- a/teste2/appsettings.json
+++ b/teste2/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb+srv://isabellerc:conhecimento123@cluster0.9wf04d.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName": "GestaoDeProduto"
+  },
   "AllowedHosts": "*"
 }
+
+
+//"ConnectionString" : "mongodb+srv://isabellerc:"conhecimento123@cluster0.9wf064d.mongodb.net/?retryWrites=true&w=majority",
