--- a/LojaH1.Catalogo.Application/LojaH1.Catalogo.Application.csproj
+++ b/LojaH1.Catalogo.Application/LojaH1.Catalogo.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\GestaoDeProduto.Data\GestaoDeProduto.Data.csproj" />
     <ProjectReference Include="..\GestaoDeProduto.Domain\GestaoDeProduto.Domain.csproj" />
+    <ProjectReference Include="..\LojaH1.Catalogo.Infra\LojaH1.Catalogo.Infra.csproj" />
   </ItemGroup>
 
 </Project>
