--- a/teste2/appsettings.json
+++ b/teste2/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb+srv://isabellerc:conhecimento123@cluster0.9wf04d.mongodb.net/?retryWrites=true&w=majority",
+    "ConnectionString": "mongodb+srv://isabellerc:P4VFllZ0d1fzvgtx@cluster0.qxuscmj.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "GestaoDeProduto"
   },
   "AllowedHosts": "*"
